2009-08-08 03:06-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/GSTextStorage.m: In initWithCoder: don't overwrite the
	contents of the text storage by attempting to unarchive when the
	unarchiver is keyed.
	* Source/NSTextView.m: In initWithCoder: retrieve the contents
	of the text storage for display in the text view.

2009-08-06 01:42-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSTextView.m: initWithCoder: temporarily remove decoding
	of NSTextContainer since it is causing a crash when editing a text
	view's that was loaded from a nib file. 

2009-08-04 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSToolbarItem.h: Move the _flags to the class
	GSToolbarBackView in NSToolbarItem.m. 
	* Source/NSToolbarItem.m: More clean up of code.
	
2009-08-02 10:15-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/AppKit/NSWindow.h
	* Source/NSApplication.m
	* Source/NSWindow.m: Added ivar for attached sheet back.

2009-08-01 20:28-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* config.make.in: Change to include BUILD_SPEECH in output
	* configure: Regenerated
	* configure.ac: Check for flite library and flite.h header.
	* Tools/GNUmakefile: Add ${BUILD_SPEECH} to subproject list.
	* Tools/say/GNUmakefile
	* Tools/say/say.m: Say utility
	* Tools/speech/FliteSpeechEngine.m: 
	* Tools/speech/GNUmakefile
	* Tools/speech/GSSpeechEngine.[hm]
	* Tools/speech/GSSpeechServer.[hm]
	* Tools/speech/GSSpeechSynthesizer.[hm]: Speech synthesis engine
	implementation using flite.
	* Tools/speech/main.m: main for the server application.
	Speech code by David Chisnall <theraven@sucs.org>
	Changes to makefiles and config by Gregory Casamento.
	
2009-08-01 17:49-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Sounds/GNUmakefile: Change makefile to copy wav files.

2009-08-01 17:47-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Sounds/Basso.ogg: Deleted..
	* Sounds/Basso.wav: Added